--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <span><i class="fas fa-chevron-left"></i></span>
         </button>
 
-        <div class="img-container first-img">
+        <div class="img-container first-img show">
             <img src="img/death-stranding.jpg" alt="death stranding">
         </div>
 
@@ -22,7 +22,23 @@
         </div>
 
         <div class="img-container">
-            <img src="img/horizon.jpg" alt="horizon zero dawn">
+            <img src="img/god-of-war.jpg" alt="god of war">
+        </div>
+
+        <div class="img-container">
+            <img src="img/uncharted.jpg" alt="uncharted 4">
+        </div>
+
+        <div class="img-container">
+            <img src="img/red-read-redemption.jpg" alt="red dead redemption 2">
+        </div>
+
+        <div class="img-container">
+            <img src="img/persona-5.jpg" alt="persona 5">
+        </div>
+
+        <div class="img-container">
+            <img src="img/dishonored-2.jpg" alt="horizon zero dawn">
         </div>
 
         <div class="img-container last-img">
@@ -35,6 +51,11 @@
         
         <div class="controller">
             <ul class="controller-dots-list">
+                <li class="controller-dots"></li>
+                <li class="controller-dots"></li>
+                <li class="controller-dots"></li>
+                <li class="controller-dots"></li>
+                <li class="controller-dots"></li>
                 <li class="controller-dots"></li>
                 <li class="controller-dots"></li>
                 <li class="controller-dots"></li>
