Syncronize arrow with dots - Completed

--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
         
         <div class="controller">
             <ul class="controller-dots-list">
-                <li class="controller-dots"></li>
-                <li class="controller-dots"></li>
-                <li class="controller-dots"></li>
-                <li class="controller-dots"></li>
-                <li class="controller-dots"></li>
-                <li class="controller-dots"></li>
-                <li class="controller-dots"></li>
-                <li class="controller-dots"></li>
-                <li class="controller-dots"></li>
+                <li class="controller-dot first-dot selected-dot"></li>
+                <li class="controller-dot not-selected-dot"></li>
+                <li class="controller-dot not-selected-dot"></li>
+                <li class="controller-dot not-selected-dot"></li>
+                <li class="controller-dot not-selected-dot"></li>
+                <li class="controller-dot not-selected-dot"></li>
+                <li class="controller-dot not-selected-dot"></li>
+                <li class="controller-dot not-selected-dot"></li>
+                <li class="controller-dot last-dot not-selected-dot"></li>
             </ul>
         </div>
     </div>
